<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.kerckhove.linefollowerremote.fragments.ConfigureFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/pidValuesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/pid_values"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/title_textSize" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_label_black_24dp"
                    android:tint="@color/colorPrimaryLight" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/kp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:gravity="start"
                        android:hint="@string/kp"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:text="0"  />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_label_black_24dp"
                    android:tint="@color/colorPrimaryLight" />

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:gravity="start"
                        android:hint="@string/ki"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:text="0" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_label_black_24dp"
                    android:tint="@color/colorPrimaryLight" />

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/kd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:gravity="start"
                        android:hint="@string/kd"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:text="0" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cycleTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cycle_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/title_textSize" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_label_black_24dp"
                    android:tint="@color/colorPrimaryLight" />

                <android.support.design.widget.TextInputLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/cycleTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start"
                        android:hint="@string/cycle_time_in_ms"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/calibrationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/calibration"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/title_textSize" />

            <Button
                android:id="@+id/calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibrate"
                android:drawableLeft="@drawable/ic_calibrate"
                android:backgroundTint="@color/colarAccentLight"
                android:textColor="@android:color/white"
                android:drawablePadding="5dp"
                android:drawableTint="@android:color/white"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
